# Django_oz

./: README.md
membership_02/: db.sqlite3
membership_02/common/: models.py
membership_02day/: db.sqlite3  pyproject.toml
membership_02day/account/: models.py
membership_02day/config/: settings.py
membership_custom/: db.sqlite3
membership_custom/account/: models.py
membership_custom/account/migrations/: 0001_initial.py
membership_custom/address/: urls.py
membership_custom/address/migrations/: 0001_initial.py
membership_custom/config/: settings.py
membership_jwt/account/: serializers.py
membership_jwt/address/: urls.py  views.py
membership_jwt/config/: authentication.py
membership_test/: README.md  db.sqlite3
membership_test/address/: serializers.py  tests.py  views.py
membership_token/: db.sqlite3
membership_token/account/: urls.py
membership_token/address/: urls.py  views.py
membership_token/config/: urls.py
oz-backend-django_01day/: db.sqlite3  pyproject.toml
oz-backend-django_01day/config/: settings.py  urls.py
oz-backend-django_01day/feeds/: urls.py  views.py
oz-django_03day/: README.md  orm.ipynb
oz-django_04day/: README.md
oz-django_04day/membership_ctm_repack/: db.sqlite3  pyproject.toml
oz-django_05day/: README.md
oz-django_06day/: README.md
oz-django_06day/membership_jwt/: pyproject.toml
oz-django_06day/membership_jwt/account/: urls.py  views.py
oz-django_06day/membership_jwt/config/: settings.py  urls.py
oz_machine_learninig/: oz_machin_learning(1) .ipynb
(+22 files in other folders)
